add star rating component

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Vanilla js components</title>
   </head>
   <body>
-    <a href="/vanilla-js-ui/components/autocomplete/">Autocomplete Input</a>
+    <a href="/vanilla-js-ui/components/star-rating/">Star Rating</a>
    
     <script type="module" src="index.js"></script>
   </body>
