add notification toast component

--- a/src/index.html
+++ b/src/index.html
@@ -20,13 +20,13 @@
       <a href="/vanilla-js-ui/components/modal/" class="card">
         Modal
       </a>
+      <a href="/vanilla-js-ui/components/notification-toast/" class="card">
+        Notification Toast
+      </a>
       <a href="" class="card">
         Coming soon
       </a>
     </section>
-   
-    <!-- <a href="/vanilla-js-ui/components/star-rating/">Star Rating</a>
-    <a href="/vanilla-js-ui/components/autocomplete/">Autocomplete</a> -->
    
     <script type="module" src="index.js"></script>
   </body>
