--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
       <a href="/vanilla-js-ui/components/notification-toast/" class="card">
         Notification Toast
       </a>
-      <a href="" class="card">
-        Coming soon
+      <a href="/vanilla-js-ui/components/file-explorer/" class="card">
+        File Explorer
       </a>
     </section>
    
